--- a/package.json
+++ b/package.json
@@ -52,5 +52,5 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^5.0.0"
   },
-  "proxy": "http://backend:8000/"
+  "proxy": "https://quickstart-image-3bzydepkuq-uc.a.run.app/"
 }
